search works and able to send data to front end

--- a/dictionarySite/dictionary/templates/result.html
+++ b/dictionarySite/dictionary/templates/result.html
@@ -2,9 +2,15 @@
 <html>
 <body>
 
-<h1>Dictionary App</h1>
+<h1>{{word}}</h1>
 
-<h3>{{word}}</h3>
+<h2>Description</h2>
+<h3>{{meaning}}</h3>
+<h2>Synonym</h2>
+<h3>{{synonym}}</h3>
+<h2>Antonym</h2>
+<h3>{{antonym}}</h3>
+
 
 </body>
 </html>
