--- a/dictionarySite/dictionary/templates/home.html
+++ b/dictionarySite/dictionary/templates/home.html
@@ -1,13 +1,39 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
-<body>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/home.css' %}">
+</head>
+<body style='background: #0092CB;'>
 
-<h1>Dictionary App</h1>
+<div class="container-fluid" >
+    <div class="row searchTextRow">
+        <div class="col-12 d-flex align-items-center justify-content-center">
+            <h1 class='searchHeading'> Search A Word</h1>
+        </div>
+    </div>
+    <div class="row searchBarRow">
+        <div class="col-12 d-flex align-items-center justify-content-center">
+            <form id=form method="post" style="height: 100%">
+                <input class='searchInput' name='word' id="word" placeholder="Enter A Word">
+            </form>
+        </div>
+    </div>
+    <div class="row searchButtonRow ">
+        <div class="col-12 d-flex align-items-center justify-content-center">
+            <button class='searchButton' type="submit" form='form'>
+                image
+            </button>    
+        </div>
+    </div>
+</div>
 
-<form id=form method="post">
-    <input name='word' id="word" placeholder="Enter A Word">
-    <button type="submit" value="search" id="search">Search</button>    
-</form>
+
+
 
 </body>
 </html>
