--- a/dictionarySite/dictionary/templates/home.html
+++ b/dictionarySite/dictionary/templates/home.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
 </head>
-<body style='background: #0092CB;'>
+<body>
 
-<div class="container-fluid" >
+<div class="container-fluid colour-overlay" >
     <div class="row searchTextRow">
         <div class="col-12 d-flex align-items-center justify-content-center">
             <h1 class='searchHeading'> Search A Word</h1>
@@ -26,7 +26,7 @@
     <div class="row searchButtonRow ">
         <div class="col-12 d-flex align-items-center justify-content-center">
             <button class='searchButton' type="submit" form='form'>
-                image
+                <img class='searchImage'src="{% static 'images/loupe.svg' %}"/>
             </button>    
         </div>
     </div>
