--- a/dictionarySite/dictionary/templates/home.html
+++ b/dictionarySite/dictionary/templates/home.html
@@ -12,7 +12,7 @@
 
 <div class="container-fluid colour-overlay" >
     <div class="row searchTextRow">
-        <div class="col-12 d-flex align-items-center justify-content-center">
+        <div class="col-12 d-flex align-items-end justify-content-center">
             <h1 class='searchHeading'> Search A Word</h1>
         </div>
     </div>
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="row searchButtonRow ">
-        <div class="col-12 d-flex align-items-center justify-content-center">
+        <div class="col-12 d-flex align-items-start justify-content-center">
             <button class='searchButton' type="submit" form='form'>
                 <img class='searchImage'src="{% static 'images/loupe.svg' %}"/>
             </button>    
