--- a/dictionarySite/dictionary/static/css/result.css
+++ b/dictionarySite/dictionary/static/css/result.css
@@ -1,4 +1,6 @@
-/* body{
+@import url('https://fonts.googleapis.com/css2?family=Rancho&display=swap');
+
+body{
     background-image: url('../images/background.png');
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -9,9 +11,9 @@
     width: 100vw;
     height: 100vh;
     background: #0092CB;
-    opacity: .7;
+    opacity: .75;
     z-index: 0;
-} */
+}
 
 .headerRow{
     width: 100vw;
@@ -27,3 +29,53 @@
     height: 30%;
     width: 100%;
 }
+
+
+.carousel-inner {
+    height: 100%;
+    width: 100%;
+}
+.carousel-item{
+    height: 100%;
+    width: 100%; 
+}
+
+.carouselText{
+    position: absolute;
+    top:50%;
+    transform: translateY(-50%);
+    text-align: center;
+    font-family: Rancho;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 2.5vw;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  height: 5vw;
+  width: 5vh;
+  background-size: 100%, 100%;
+  background-image: none;
+}
+
+
+.sliderDiv{
+    
+    width:85%;
+    height: 100%;
+    background-color: #BFF0FF;
+    border-radius: 50px;
+    border: 2px solid #0059CD;
+
+}
+.carousel-control-prev-icon {
+    border-radius: 50%;
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%230059CD' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+   }
+   
+   .carousel-control-next-icon {
+    border-radius: 50%;
+
+     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%230059CD' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+   }
