--- a/dictionarySite/dictionary/static/css/result.css
+++ b/dictionarySite/dictionary/static/css/result.css
@@ -43,12 +43,14 @@ body{
 .carouselText{
     position: absolute;
     top:50%;
-    transform: translateY(-50%);
+    left:50%;
+    width: 70%;
+    transform: translateX(-50%) translateY(-30%);
     text-align: center;
     font-family: Rancho;
     font-style: normal;
     font-weight: normal;
-    font-size: 2.5vw;
+    font-size: 1.5vw;
 }
 
 .carousel-control-prev-icon,
@@ -79,3 +81,18 @@ body{
 
      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%230059CD' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
    }
+
+   .carousel-caption {
+    top: 0;
+    bottom: auto;
+    text-align: center;
+    font-family: Rancho;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 2.5vw;
+    color: black;
+    padding:0px;
+    margin:0px;
+    padding-top: 1%;
+
+}
